<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/national_bg_lock"
    android:padding="50dp">


    <TextView
        android:id="@+id/text_no_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/no_lock"
        android:textColor="@color/black"
        android:textSize="@dimen/font_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>


    <ImageView
        android:id="@+id/image_no_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/national_no_lock"
        app:layout_constraintBottom_toTopOf="@+id/text_no_lock"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"></ImageView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/national_next_btn_style"
        android:padding="5dp"
        android:text="@string/bind_lock"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_no_lock"></TextView>

    <TextView
        android:id="@+id/btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/national_next_btn_style"
        android:padding="5dp"
        android:text="@string/refresh"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_no_lock"></TextView>


</androidx.constraintlayout.widget.ConstraintLayout>