<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/ll_idcard_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target_tel_input_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_detail" />
        <!--android:id="@+id/id_lock_share_accout_input"-->
        <EditText
            android:id="@+id/id_lock_share_accout_input"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/national_white_rectangle_bg"
            android:gravity="center_vertical"
            android:hint="@string/lock_share_accout_input_none"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="6dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_bg_click"
            android:textSize="@dimen/font_detail" />

        <TextView
            android:id="@+id/id_select_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="通讯录"
            android:textColor="@color/default_color"
            android:textSize="@dimen/font_detail"
            android:visibility="gone" />
    </LinearLayout>


    <View
        android:id="@+id/view41"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/ll_idcard_name_input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/deviders" />


    <LinearLayout
        android:id="@+id/ll_idcard_alias_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view41"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/id_idcard_alias_input_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_pwd_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_detail" />
        <!--android:layout_width="110dp"-->
        <EditText
            android:id="@+id/id_idcard_alias_input"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/national_white_rectangle_bg"
            android:gravity="center_vertical"
            android:hint="@string/error_pwd_name_input_none"
            android:maxLines="1"
            android:paddingLeft="6dp"
            android:singleLine="true"

            android:textColor="@android:color/black"
            android:textColorHint="@color/common_bg_click"
            android:textSize="@dimen/font_detail" />
    </LinearLayout>

    <View
        android:id="@+id/view21"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/ll_idcard_alias_input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/deviders" />

    <LinearLayout
        android:id="@+id/ll_idcard_start_date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view21"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="授权开始"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_detail" />
        <!--android:text="@string/lock_share_start_date_title"-->
        <TextView
            android:id="@+id/id_idcard_start_date_input"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/national_white_rectangle_bg"
            android:gravity="center_vertical"
            android:hint="@string/error_lock_share_start_date_input_none"
            android:maxLength="18"
            android:paddingLeft="6dp"

            android:textColor="@android:color/black"
            android:textColorHint="@color/common_bg_click"
            android:textSize="@dimen/font_detail" />
    </LinearLayout>

    <View
        android:id="@+id/view11"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/ll_idcard_start_date_input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/deviders" />

    <LinearLayout
        android:id="@+id/ll_idcard_date_valid_period_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view11"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="授权结束"
            android:textColor="@android:color/black"

            android:textSize="@dimen/font_detail" />
        <!--android:text="@string/lock_share_valid_period_title"-->
        <TextView
            android:id="@+id/id_idcard_date_valid_period_input"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/national_white_rectangle_bg"
            android:gravity="center_vertical"
            android:hint="@string/error_lock_share_valid_period_input_none"
            android:paddingLeft="6dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_bg_click"
            android:textSize="@dimen/font_detail" />


        <ImageView
            android:id="@+id/id_idcard_date_valid_period_input_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/national_icon_3_points"

            />
        <!--android:layout_marginLeft="10dp"-->
    </LinearLayout>

    <!--android:drawableRight="@drawable/icon_days"-->

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/ll_idcard_date_valid_period_input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/deviders" />


    <CheckBox
        android:id="@+id/chk_same_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view4"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:button="@drawable/national_style_checkbox"
        android:checked="false"
        android:paddingLeft="6dp"
        android:text="@string/txt_pwd_valid_once"
        android:textColor="@color/orange_color_2"

        android:textSize="@dimen/font_detail" />

    <TextView
        android:id="@+id/id_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chk_same_end_time"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"

        android:text="@string/txt_lock_pwd_valid_once_only_hint"
        android:textColor="@color/ctid_orange"
        android:textSize="12sp"


        />

    <TextView
        android:id="@+id/id_btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@color/orange_color_2"
        android:gravity="center"
        android:padding="10dp"
        android:text="短信发送"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_detail" />


    <TextView
        android:id="@+id/id_btn_wx_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_btn_next"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/national_round_btn_style_stroke"
        android:gravity="center"
        android:padding="10dp"
        android:text="微信发送"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_detail"
        android:visibility="gone" />


</RelativeLayout>